Coffee_backery_Code/css/style.css
/******************************************
/* CSS
/*******************************************/

/*Imported Fonts*/

@font-face{
  font-family: 'Volkhov';
  font-weight: 400;
  src: url('assets/Fonts/volkhov-regular-webfont.woff2') format('woff2')
       url('assets/Fonts/volkhov-regular-webfont.woff') format('woff') 
}

@font-face{
  font-family: 'Vollkorn SC';
  font-style:'Black';
  font-weight: 900;
  src: url('assets/Fonts/VollkornSC-Black.ttf') format('woff2')
}

@font-face{
  font-family: 'Vollkorn';
  font-style: Bold;
  font-weight: 700;
  src: url('assets/Fonts/vollkorn-bold-webfont.woff2') format('woff2')
       url('assets/Fonts/vollkorn-bold-webfont.woff') format('woff') 
}

/* Box Model Hack */
*{
  box-sizing: border-box;
  margin: 0px;
}

/* Normalize default*/

li, a{
  list-style: none;
  font-style: none;
  text-decoration: none;
}

ul, menu{
  padding: 0;
}
/******************************************
/* Fonts
/*******************************************/

/*Font set up*/

html{
  font-size: 62%;
}

/* Headings General*/

h1{
  font-family:'Vollkorn',serif;
  font-size: 7rem;
  font-weight: 700;
  line-height: 134px;
}

h2{
  font-family: 'Vollkorn SC',serif;
  font-size: 5rem;
  font-weight: 900;
  line-height: 89px;
}

h3{
  font-family: 'Vollkorn SC',serif;
  font-size: 3.5rem;
  font-weight: 900;
  line-height: 56px;
}

h4, a{
  font-family: 'Vollkorn SC',serif;
  font-size: 2.25rem;
  font-weight: 900;
  line-height: 34px;
}

.body-text, .come-visit-details li, footer li{
  font-family: sans-serif;
  font-size: 1.4rem;
  font-weight: 400;
  line-height: 26px;
}

.body-text-lg, .menu-options span{
  font-family: 'Volkhov', serif;
  font-size: 1.8rem;
  font-weight: 400;
  line-height: 26px;
}

.body-text, p{
  font-family: sans-serif;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 21px;
}

a{
  font-size: 2rem;
}

.subtitle-sm{
  font-family: 'Volkhov', serif;
  font-size: 3rem;
  font-weight: 400;
  line-height: 31px;
}



/******************************************
/* LAYOUT
/*******************************************/

/*Comon properties*/

.width-100{
  width: 100%;
}

.height-100{
  height: 100%;
}

.flex-row{
  display: flex;
  flex-direction: row;
  align-items: center;
}

.flex-column{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.align-text-left>*{
  text-align: left;
  width: 100%;
}

.alig-text-right{
  text-align: right;
}

/*Special pieces*/

.bg-img{
  background-image: url("assets/img/Big view Restaurant BG.png");
  background-size: cover;
  background-position: top ;
  background-color: #85b9c4;
}

.bg-img-02{
  background-image: url("assets/img/Big view Restaurant BG.png");
  background-size: cover;
  background-position: bottom ;
  background-color: #85b9c4;
}

/*Body*/

body{
  display: flex;
  flex-direction: column;
}

/*Header*/

header{
  position: fixed;
  z-index: 999;
  height: 8rem;
}

header nav{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 1%;
  text-align: center;
}

header nav>ul>*{
  width: 150px;
  padding: 0 5px;
}

.social-icons img, .social-icons a, .social-icons li{
  display: flex;
  flex-direction: row;
  align-items: center;
}


.nav-toggle{
  display: none;
}

.nav-toggle-label{
  display: none;
}

.social-icons{
  align-items: center;
  gap: 13%; 
  height: 100%;
}

.social-icons img{
  width: 150%;
}

/*MINI LOGO*/

  .mini-logo{
    width: 100%;
    width: 330px;
  }

  .mini-logo-anchor{
    width: 100%;
    display: flex;
    justify-content: center;
    align-self: center;
    position: absolute;
  }

/*Big logo section Home*/

.logo-home-section{
  justify-content: center;
  padding: 32vh 5vh;
}

.logo-home-section img{
  width: 900%;
  min-width: 5rem;
  max-width: 1200px;
}

/*About Us Section*/

.about-us-styling-border{
  padding: 18px 0;
}

.about-us-section h3{
  text-align: center;
}

.about-us-section{
  min-height: 680px;
  padding: 70px 0 40px 0;
}

.about-us{
  flex-wrap: wrap;
  justify-content: center;
  gap: 25px;
  padding: 30px 0 95px 0;
  height: fit-content;

}

.about-us p{
  width: 390px;
  padding-bottom: 15px;
}

.about-us img{
  min-width: 700px;
}

/*Pointers*/

  /*01*/

  .custom-shape-divider-bottom-1689962334 {
    position: absolute;
    bottom: 1;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-bottom-1689962334 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 5rem;
    z-index: 1;
    transform: rotate(180deg);
}

.custom-shape-divider-bottom-1689962334 .shape-fill {
    fill: #949C72;
}


  /*02*/
  .custom-shape-divider-bottom-1689960331 {
    position: absolute;
    width: 100%;
    overflow: hidden;
    line-height: 30px;
}

.custom-shape-divider-bottom-1689960331 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 5rem;
    transform: rotate(180deg);
}

.custom-shape-divider-bottom-1689960331 .shape-fill {
    fill: #F8D0A1;
}



/* Come Visit */

.come-visit-section{
  gap: 4rem;
  width: min(67vw,930px);
  height:  90%;
  min-height:630px;
  margin: 25vw auto;
  padding: 55px; 
  justify-content: start;
  background-color: rgba(72, 153, 169, 0.85) ;
}

.come-visit-details{
  justify-content: space-around;
  align-items: start;
  flex-wrap: wrap;
  gap: 50px;
}

.come-visit-details ul>*{
  padding: 5% 0;
}

.come-visit-details div{
  width: max(45%, 250px);
}

.come-visit-details div h4{
  width: 100%;
  text-align: center;
}

/* Our Goods */

.our-goods-section{
  align-items: center;
}

.our-goods-section>h2{
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
  margin: 20px 0;
}

.menu-options{
  flex-wrap: wrap;
  margin: 15px 0;
  justify-content: center;
}

.our-goods-section>section{
  display: flex;
  flex-direction: column;
  max-width: 1100px;
  min-height: 85vh;
  padding: 7vh 0;
}

.menu-category-selection li{
  padding: 0 4%;
  position: relative;
}

.our-goods-section>section>nav ul{
  justify-content: center;
}

    /*Product display*/

    .product-card{
      border-radius: 55px;
      overflow: hidden;
      flex-shrink: 0;
      position: relative;
      flex-direction: column;
      justify-content: flex-end;
      width: 255px;
      margin: 3% 4%;

      transition: 0.5s;
    }

    .product-card img{
      width: 100%; 
      object-fit: cover;
    }

    .card-body{
      height: 100%;
      top: 75%;
      position: absolute;
      background: #5C5444;
      display: flex;
      padding: 10% 10%;
      gap: 25px;
      
      transition: 0.4s;
    }

    .product-card:hover .card-body{
      top: 0%;
      background: #85bac4a1;
      backdrop-filter: blur(2px);
      padding-top: 32%;
    }

    .product-card:hover{
      transform: scale(1.1);
      z-index: 2;
      box-shadow: 0 0 20px 2px  #5C5444;
    }

    .main-product-info{
      justify-content: space-around;
      align-items: baseline;
    }

    .main-product-info span{
      font-size: 2.35rem;
    }

/* Footer */

footer{
  padding: 4%;
}

.footer-section ul>*{
  padding: 4% 0;
}

.footer-section{
  flex-wrap: wrap;
  justify-content: space-between;
}


/******************************************
/* ADDITIONAL STYLES
/*******************************************/

 /*Color*/

/*Page Color*/

.main-color-01{
   background-color: #F8D0A1;
 }

 .main-color-02{
  background-color:  #949C72;
 }

 .focus-color{
  background-color: #5C5444;
 }

 /*Font colors*/
 .white-text{
  color: white;
 }

 .brown-text *{
  color: #5C5444;
 }


 /******************************************
/* Interactive effects
/*******************************************/


/*Nav link buttons*/

.hoverGlow{
  text-decoration: none;
  color: #5C5444;
  position: relative;
}

.hoverGlow::after{
  content: "";
  position: absolute;
  color: white;
  left: 5%;
  bottom: 5px;
  width: 90%;
  height: 2px;
  background-color: currentColor;

  transform: scaleX(0);
  transition: transform 110ms ease-in;
}

.hoverGlow:hover > a{
  color: white;
}

.hoverGlow:hover{
  background-color: #5C5444;
  border-radius: 15px;
}

.hoverGlow:hover::after{
  transform: scaleX(0.8);
}


/*Our goods buttons*/

.menuGlow{
  text-decoration: none;
  color: #5C5444;
  position: relative;
  height: 40px;
  border-radius: 15px;
}

.menuGlow::after{
  content: "";
  position: absolute;
  color:#5C5444;
  left: 5%;
  bottom: 4px;
  width: 90%;
  height: 2px;
  background-color: currentColor;

  transform: scaleX(0.85);
  transition: transform 110ms ease-in;
}

.menuGlow:hover > a{
  color: white;
}

.menuGlow:hover{
  background-color: #5C5444;
  border-radius: 15px;
}

.menuGlow:hover::after{
  transform: scaleX(0.95);
  color: white;
}

/*Media Querry*/

@media (max-width: 624px){

  /*Product display*/
  
  .product-card{
    width: 40%;
  }
}

@media (max-width: 569px){

  /*footer*/

  .footer-section{
    text-align: center;
    justify-content: center;
  }

  .footer-section div *{
    justify-content: center;
    text-align: center;
  }
}

@media (max-width: 756px){

  /* Special bg*/
  .bg-img-02{
    background-size: 1300px;
  }
}

@media (max-width:1307px){
 
  /*Header*/

  header{
    display: flex;
    position: fixed;
    z-index: 999;
    flex-direction: column;
  }
  
  header nav{
    flex-direction: column;
    padding: 1%;
    align-items: start;
    display: none;
  }
  
  header nav>ul{
    justify-content: flex-start;
    align-items: start;
    align-content: flex-start;
  }
  
  header nav>ul>*{
    padding: 0 5px;
    display: flex;
    justify-content: center;
  }

  .nav-option{
    display: flex;
    flex-direction: column;
  }
  
  .social-icons img, .social-icons a, .social-icons li{
    display: flex;
    flex-direction: row;
  }
  
  .social-icons{
    gap: 13%; 
    height: 10%;
  }
  
  .social-icons img{
    width: 150%;
  }
  
  .mini-logo-anchor{
    display: flex;
    position: static;
  }

    /*nav toggle effec*/

    .nav-toggle:checked ~ nav{
      display: block;
    }

    .nav-toggle-label{
      position: absolute;
      top: 0;
      left: 0;
      margin-left: 1em;
      border: 1px solid red;
      height: 69px;
      display: flex;
      align-items: center ;
    }

    .nav-toggle-label>span,
    .nav-toggle-label>span::before,
    .nav-toggle-label>span::after{
      display: block;
      background-color: #5C5444;
      height: 3px;
      width: 2em;
      border-radius: 2px;
      position: relative;
    }

    .nav-toggle-label>span::before,
    .nav-toggle-label>span::after{
      content: " ";
      position: absolute;
    }

    .nav-toggle-label>span::before{
      bottom: 7px;
    }

    .nav-toggle-label>span::after{
      top: 7px;
    }

    
}

